# gen/openapiv2/auth/v1/services.swagger.json
@@ -280,9 +280,9 @@
         "accessToken": {
           "type": "string"
         },
-        "expiresIn": {
+        "expiresAt": {
           "type": "string",
-          "format": "int64"
+          "format": "date-time"
         }
       }
     },
